[package]
name = "piu"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["full", "server"] }
hyper-util = { version = "0.1.10", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
